Add image to hotel model

--- a/Web application/app/views/hotels/show.html.haml
+++ b/Web application/app/views/hotels/show.html.haml
@@ -5,4 +5,6 @@
     Рейтинг: #{@hotel.star_rating}
 %h2
     Адрес: #{@hotel.address}
+- if !@hotel.photo.file.nil?
+    = image_tag(@hotel.photo_url) if @hotel.photo?
 
