--- a/Web application/app/views/hotels/edit.html.haml
+++ b/Web application/app/views/hotels/edit.html.haml
@@ -1,10 +1,17 @@
 = link_to 'Назад', hotels_path
 %h1 Редактировать запись
-= form_for @hotel do |f|
-    = f.text_field :title
-    = f.text_field :star_rating
-    = f.text_field :breakfast_included
-    = f.text_field :room_description
-    = f.text_field :price_for_room
-    = f.text_field :address
-    = f.submit "Сохранить"
+= simple_form_for @hotel, :html => { :multipart => true } do |f|
+    = f.error_notification
+    %div.form-inputs
+        = f.hidden_field :user_id
+        = f.input :title, label: 'Название', required: true, autofocus: true
+        = f.input :star_rating, label: 'Рейтинг', required: true
+        = f.input :breakfast_included, label: 'Есть завтрак', required: true
+        = f.input :room_description, label: 'Описание комнаты', as: :text, required: true
+        = f.input :price_for_room, label: 'Цена за сутки', required: true
+        = f.input :address, label: 'Адрес',required: true
+        = f.file_field :photo, label: 'Изображение'
+        = f.hidden_field :photo_cache
+        = image_tag(@hotel.photo_url) if @hotel.photo?
+    %div.form-actions
+        = f.button :submit, 'Сохранить'
